fixed css issues

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -1,16 +1,12 @@
 .jumbotron {
     height: 25rem;
     margin: 20vh auto 0 auto;
-};
+}
 
 .links {
-    margin: .1rem auto 0 auto;
-};
+    margin: 0 auto 0 25%;
+}
 
-h1 {
-    margin-top: 20;
-};
-
-.form-control {
-    width: 500px !important;
+.container {
+    padding-top: 1%;
 }
